	* Improved package validator to reject .deb files including .hg / .git
	  directories.
	* Improved package validator to detect some issues with percent expansions.
	* Cleaned up the code base, including removal of some dead code for old OS X
	  version, and anything related to the AddShlibDeps .info field.
	* Prohibit bootstrapping into /usr/local and any subdir of it.

/-------------
| fink 0.31.x (see https://github.com/fink/fink/tree/branch_0_31)
\-------------

0.31.4 "perfidy" (2011-10-28)
	* Synced base .info files against latest versions from dists.
	* Added support for XCode 4.2 on Mac OS X 10.6.
	* Fixed bootstrap issue when GNU sed is in the PATH.
	* Updated mirror list.

0.31.3 "mendacity" (2011-10-12)
	* Added support for Mac OS X 10.7.2.
	* Added support for App Store version of Growl.app as well as legacy prefpane.

0.31.2 "perjury" (2011-09-26)
	* No longer enforce "BDep:fink>=0.24.12" for use of PatchFile (nothing older
	  than that would be usable now anyway)
	* Building with the number of threads specified by MaxBuildJobs is now
	  default (i.e. UseMaxBuildJobs: true is the default) unless 
	  MaxBuildJobs: false is set.
	* InstallScript always disables UseMaxBuildJobs.

0.31.1 ""little white"" (2011-09-11)
	* Added support for Mac OS X 10.7.1.
	* Allow 32 bit systems to bootstrap on 10.6.
	* Simplified some code by taking advantage of the fact that the minimal
	  supported OS version now is 10.5.
	* Bug fixes

0.31.0 "fib" (2011-07-20)
	* Added support for Mac OS X 10.7.
	* Dropped support for any Mac OS X version before 10.5. So 10.5, 10.6 and
	  10.7 are the only supported OS X versions now.
	* Bug fixes

/-------------
| fink 0.30.x (see https://github.com/fink/fink/tree/branch_0_30)
\-------------

0.30.2 "Palin" (2011-07-11)
	* Last fink version for 10.4, and end of support for the OS.
	* Adds support for the 10.4-EOL subdirectory in dists.

0.30.1 "Hannity" (2011-06-28)

0.30.0 "Beck" (2011-04-30)

/-------------