@@ -716,17 +716,13 @@ for a current list of known bugs.
 .\"
 .\"
 .Sh AUTHOR
-The current maintainer of this manpage is Max Horn <max@quendi.de>
+This manpage is maintained by the Fink Core Group <fink-core@lists.sourceforge.net>.
 .\"
 .\"
 .\" ACKNOWLEDGEMENTS
 .\"
 .\"
 .Sh ACKNOWLEDGEMENTS
-The original author of 
-.Nm
-is Christoph Pfisterer <cp@chrisp.de>.
-.br
 .Nm
 is developed and maintained by The Fink Project (http://www.finkproject.org).
 .\"
