@@ -424,7 +424,7 @@ packages when scanning.
 .\"
 .\"
 .Sh AUTHOR
-Finlay Dobbie <finlayd@users.sourceforge.net>.
+This manpage is maintained by the Fink Core Group <fink-core@lists.sourceforge.net>.
 .\"
 .\"
 .\" ACKNOWLEDGEMENTS
